# rust-web-start

./: Cargo.toml  README.md  create-table.sql  insert-value.sql  web-start.toml
src/: app.rs  database.rs  error.rs  logger.rs  main.rs  server.rs
src/app_config/: database.rs  mod.rs  server.rs
src/entity/: course.rs  department.rs  mod.rs  prelude.rs  sc.rs  score.rs  student.rs  users.rs
src/query/: course.rs  department.rs  index.rs  mod.rs  response.rs  sc.rs  student.rs
src/route/: course.rs  department.rs  extract.rs  index.rs  jwt.rs  middleware.rs  mod.rs  page.rs  result.rs  score.rs  student.rs
src/route/request/: course.rs  department.rs  index.rs  login.rs  mod.rs  resource.rs  score.rs  student.rs
static/: ai.html  index.html  js.js  square.html  student.html  style.css
static/.well-known/appspecific/: com.chrome.devtools.json
static/css/: ai.css  communal.css  index.css  student.css
static/js/: ai.js  auth.js  index.js  student.js  util.js
